# web_oauth_template

./: .gitignore  .prettierignore  Dockerfile  README.md  backup.sql  cargo-generate.toml  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml  mergify.yml
.github/workflows/: checks.yml  checks.yml.liquid  release-trigger.yml.liquid  release.yml  release.yml.liquid
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.Dev
backend/entity/: Cargo.toml
backend/entity/src/entities/: group.rs  group_permission.rs  group_user.rs  invalid_jwt.rs  key.rs  mod.rs  prelude.rs  settings.rs  setup.rs  user.rs  user_avatar.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs
backend/src/: config.rs  cors.rs  dummy.rs  error.rs  lib.rs  main.rs  settings.rs  utils.rs
backend/src/auth/: endpoint.rs  jwt.rs  jwt_auth.rs  jwt_state.rs  logout.rs  mod.rs  oidc.rs  res.rs  state.rs  test_token.rs
backend/src/db/: invalid_jwt.rs  mod.rs  pool.rs
backend/src/db/tables/: invalid_jwt.rs  key.rs  mod.rs
backend/tests/: common.rs  groups.rs  user.rs  user_management.rs
frontend/: .env.example  Dockerfile  openapi-ts.config.ts  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: permissions.svelte.ts  redirect.ts
frontend/src/lib/backend/: auth.svelte.ts  config.ts  types.svelte.ts  updater.svelte.ts  util.svelte.ts
frontend/src/lib/client/: client.gen.ts  index.ts  msw.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/client/client/: types.gen.ts  utils.gen.ts
frontend/src/lib/components/: SimpleAvatar.svelte  nav.svelte.ts
frontend/src/lib/components/table/: Table.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/account/: +layout.svelte  +page.server.ts  schema.svelte.ts
frontend/src/routes/account/auth/: +page.svelte  +page.ts  Email.svelte  Password.svelte  schema.svelte.ts
frontend/src/routes/account/general/: +page.svelte  schema.svelte.ts
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/error/: +page.svelte
frontend/src/routes/groups/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/groups/[uuid]/: +page.svelte  +page.ts  Permissions.svelte  schema.svelte.ts
frontend/src/routes/groups/create/: +page.svelte  Information.svelte  schema.svelte.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/password/: +page.server.ts
frontend/src/routes/password/forgot/: +page.svelte  schema.svelte.ts
frontend/src/routes/password/reset/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/settings/: +layout.svelte  +page.server.ts
frontend/src/routes/settings/mail/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/settings/user/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/setup/: +page.svelte  +page.ts  AdminUser.svelte  DatabaseSetup.svelte  OidcSetup.svelte  UserSetup.svelte  schema.svelte.ts
frontend/src/routes/users/: +page.svelte  +page.ts  table.svelte.ts
frontend/src/routes/users/[uuid]/: +page.svelte  +page.ts  schema.svelte.ts
frontend/src/routes/users/create/: +page.svelte  +page.ts  Information.svelte  schema.svelte.ts
frontend/src/tests/_helpers/: layout.ts
frontend/src/tests/e2e/: overview.spec.ts
frontend/src/tests/mocks/e2e/: data.ts  handlers.ts
