[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
centaurus = { version = "0.9.0", features = [
  "sea-orm",
  "uuid",
  "argon2",
  "base64",
  "rsa",
  "auth",
  "jsonwebtoken",
  "reqwest",
  "url",
  "image",
  "gravatar",
  "lettre",
] }
uuid = { version = "1.23.0", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.20", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
axum = { version = "0.8.8", features = ["macros", "ws", "tracing"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
tracing = "0.1.44"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio = { version = "1.51.1", features = ["signal"] }
http = "1.4.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
hyper-util = { version = "0.1.20", features = ["client-legacy"] }
chrono = "0.4.44"
rsa = "0.9.10"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
time = "0.3.47"
url = { version = "2.5.8", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde_json = "1.0.149"
aide = { version = "0.16.0-alpha.3", features = [
  "axum",
  "axum-json",
  "axum-tokio",
  "axum-query",
  "axum-ws",
  "axum-extra",
  "axum-extra-cookie",
  "axum-extra-headers",
  "macros",
] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04", "url2"] }
# Required to enable image formats
image = { version = "0.25.10", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
] }

[features]
# only used for testing purposes
test = []

[[bin]]
name = "backend"
path = "src/main.rs"
